# AudioInsight

./: .gitignore  DOMAIN_SPECIFIC_CONFIG.md  Dockerfile  GEMINI_LIVE_API_EXAMPLE.py  GEMINI_LIVE_API_EXAMPLE_UI.html  LLM_ANALYSIS.md  LLM_SUMMARIZATION.md  OPENAI_REALTIME_EXAMPLE.py  OPENAI_REALTIME_EXAMPLE_UI.html  README.md  TECHNICAL_DESCRIPTION.md  backup.html  gemini_live_api.py  openai_realtime_transcription.py  package-lock.json  package.json  pyproject.toml  setup.py  start.sh  test.py  test1.py  ui.html
.cursor/rules/: audioinsight-overview.mdc  project-structure.mdc  testing-guidelines.mdc
.next/: app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json
.next/server/: app-paths-manifest.json  next-font-manifest.json  server-reference-manifest.json
audio/: c-IX1061gw0_1-17.json
audioinsight/: __init__.py  app.py  audio_processor.py  audioinsight_kit.py  audioinsight_server.py  config.py  core.py  display_parser.py  llm.py  logging_config.py  main.py  processors.backup  processors.py  server.py  timed_objects.py
audioinsight-ui/: README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
backups/: audio_processor.backup  llm.backup  server.backup
data/: demo.txt
scripts/: cleanup-ports.sh  start-backend-and-wait.sh  start-backend.sh  start-dev.sh  start-frontend.sh
whisperlivekit/: __init__.py  audio_processor.py  basic_server.py  core.py  llm.py  server.py  timed_objects.py
(+72 files in other folders)
