[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audioinsight"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "faster-whisper>=1.1.1",
    "ffmpeg-python>=0.2.0",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.21",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "openai>=1.84.0",
    "opencc>=1.1.9",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "soundfile>=0.13.1",
    "torch>=2.7.1",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
    "whisper>=1.1.10",
]

[project.optional-dependencies]
diarization = [
    "huggingface-hub>=0.32.4",
    "pyannote-audio>=3.3.2",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
]

[project.scripts]
audioinsight-server = "audioinsight.app:main"
